fix: overflow-y msg

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body{
 }
 
 #container{
-    border: 1px solid red;
     width: 80%;
     margin: 50px auto;
     /* DEBUG */
@@ -26,13 +25,11 @@ body{
 }
 
 #left-menu{
-    border: 1px solid red;
     width: 35%;
     height: 100%;
 }
 
 #right-menu{
-    border: 1px solid blue;
     width: 65%;
     height: 100%;
 }
